--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </div>
                 <div class="mastfoot">
                     <div class="inner">
-                        <p>Copyright © 2014 - <?php echo date("Y"); ?> by <a href="/">SAMP.VN</a></p>
+                        <p>Copyright © 2014 - 2021 by <a href="/">SAMP.VN</a></p>
                     </div>
                 </div>
                 <div class="modal fade" id="subscribeModal" tabindex="-1" role="dialog"
