--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                             <img class="logo-sampvn" src="img/logo.png">
                         </a>
                         <nav class="nav nav-masthead">
-                            <a class="nav-link nav-social" target="_blank" href="https://www.facebook.com/www.samp.vn"
+                            <a class="nav-link nav-social" target="_blank" href="https://www.facebook.com/gamesampvn"
                                title="Facebook"><i class="fab fa-facebook-f" aria-hidden="true"></i></a>
                             <a class="nav-link nav-social" target="_blank"
                                href="https://www.facebook.com/groups/www.samp.vn" title="Facebook"><i
